authorization_code/public/styles.css
#login, #loggedin, #logoutButton {
    display: none;
}

.wrapper { 
overflow:hidden;
padding-left: 170px;
}

.wrapper div {
min-height: 200px;
padding: 10px;
}

#button-group {
  max-height: 70px;
  min-height: 50px;
  max-width: 450px;
  min-width: 100px;
  padding-left: 0px;
  padding-top: 0px;
  /* background-color: antiquewhite; */
}

#button-group2 {
  max-height: 70px;
  min-height: 50px;
  padding-left: 0px;
  padding-top: 0px;
  /* background-color: antiquewhite; */
}

.leftMostCustomBtn {
  padding-left: 0px;
}

#outer-div {
  width: 100%;
  text-align: center;
  background-color: #0666a3
}

#inner-div {
  display: inline-block;
  margin: 0 auto;
  padding: 3px;
  background-color: #8ebf42
}

#one {
/* background-color: gray; */
/* float:left;  */
/* margin-right:20px; */
width:200px;
min-width: 550px;
}
#two { 
/* background-color: white; */
overflow:hidden;
/* margin:10px;
border:2px dashed #ccc; */
min-height:170px;
padding-top: 100px;
}

  .themeBtn {
    max-height: 200px;
  }

  .themeBtn:focus {
    outline: none;
    box-shadow: none;
  }

  .timeBtn {
    max-height: 200px;
  }

  .timeBtn:focus {
    outline: none;
    box-shadow: none;
  }

  .overlay {
    z-index: 2;
    margin-top: 450px;
  }


  #cloudContainer {
    width: 550px;
    height: 500px;
    /* position: relative; */
  }
  
  #spotifyWatermark {
    width: 100px;
    height: auto;
    position: absolute;
    top: 470px;
  }

  /* #word_cloud {
    display: none;
  } */

  /* #spotifyImage {
    width: 100px;
    height: auto;
    position: absolute;
    z-index: 3;
  } */


  #navBarWordCloudify {
    color: black;
    text-decoration: none !important;
  }

  #footer {
    text-align: center;
    padding-top: 100px;
  }



  @font-face {
    font-family: myFirstFont;
    src: url("./CloudyCloud-nREq4.otf") format("opentype");
  }
  
  .header {
    font-size: 2em;
  }

  .wordcloudifyFont {
    font-family: myFirstFont;
  }

  #info {
    margin-right: 20px;
  }

  .label {
    text-align: left;
  }

  #privacyPolicyContainer {
    text-align: center;
    padding-top: 20px;
    padding-left: 10px;
    padding-right: 10px;
    justify-content: center;
    margin: 0 auto;
    width: 50%
  }

  #word_cloud_img {
    width: 550px;
    height: 400px;
  }

  #spotifyLogin {
    background-color: white;
    overflow:hidden;
    min-height:170px;
    padding-top: 0px;
    min-width: 200px;
    margin:auto;
  }







@media screen and (max-width: 1000px) {
  /* #one { 
      float: none;
      margin-right:0;
      width:auto;
      border:0;
      border-bottom:2px solid #000;   
  } */
}


@media screen and (max-width: 1200px) {
  .wrapper { 
    overflow:hidden;
    text-align: center;
    padding-left: 0px;
  }

  #one {
    /* background-color: gray; */
    /* float:left;  */
    /* margin-right:20px; */
    width:200px;
    min-width: 550px;
    margin:auto;
  }


  #two { 
    background-color: white;
    overflow:hidden;
    min-height:170px;
    padding-top: 0px;
    min-width: 500px;
    margin:auto;
  }

  #cloudContainer {
    text-align: left;
  }

}

@media screen and (max-width: 780px) {
  #privacyPolicyContainer {
    text-align: center;
    padding-top: 20px;
    padding-left: 10px;
    padding-right: 10px;
    width:100%;
  }

  .wrapper { 
    overflow:hidden;
    text-align: center;
    padding-left: 0px;
  }

  #one {
    width:max-content;
    height: 450px;
    object-fit: scale-down;
    margin:auto;
    padding-bottom: 30px;
  }


  #two { 
    padding-top: 20px;
    min-width: 500px;
    margin:auto;
    height: 400px;
    padding-left: 0px;
  }


  #word_cloud_img {
    height: 350px;
    width: 450px;
    object-fit: scale-down;
    text-align: center;
    padding-top: 0px;
  }

  #cloudContainer {
    height: 450px;
    width: 450px;
    object-fit: scale-down;
    padding-left: 0px;
    text-align: left;
  }

  #spotifyWatermark {
    top: 400px;
  }

  #word_cloud {
    display: none;
  }

  #download {
    float: left;
  }

}

@media screen and (max-width: 530px) {

  #exampleWordCloudImage {
    height: 350px;
    width: 450px;
    object-fit: scale-down;
    text-align: center;
    padding-top: 0px;
    text-align: left;
  }

}

@media screen and (max-width: 450px) {

  #one {
    height: 300px;
  }

  #exampleWordCloudImage {
    height: 350px;
    width: 350px;
    object-fit: scale-down;
    text-align: center;
    padding-top: 0px;
    text-align: left;
  }

}

@media screen and (max-width: 470px) {
  #privacyPolicyContainer {
    text-align: center;
    padding-top: 20px;
    padding-left: 10px;
    padding-right: 10px;
    width:100%;
  }

  .wrapper { 
    overflow:hidden;
    text-align: center;
    padding-left: 0px;
  }

  #one {
    width:max-content;
    height: 390px;
    object-fit: scale-down;
    margin:auto;
    padding-bottom: 30px;
  }


  #two { 
    padding-top: 20px;
    min-width: 500px;
    margin:auto;
    height: 400px;
    padding-left: 0px;
  }


  #word_cloud_img {
    height: 300px;
    width: 370px;
    object-fit: scale-down;
    text-align: center;
    padding-top: 0px;
  }

  #cloudContainer {
    height: 400px;
    width: 370px;
    object-fit: scale-down;
    padding-left: 0px;
    text-align: left;
  }

  #spotifyWatermark {
    top: 345px;
  }
}

@media screen and (max-width: 380px) {
  .wrapper { 
    overflow:hidden;
    text-align: center;
    padding-left: 0px;
  }

  #one {
    width:max-content;
    height: 320px;
    object-fit: scale-down;
    margin:auto;
  }


  #two { 
    background-color: white;
    overflow:hidden;
    padding-top: 0px;
    min-width: 500px;
    margin:auto;
    height: 400px;
  }


  #word_cloud_img {
    height: 220px;
    width: 300px;
    object-fit: scale-down;
    text-align: center;
  }

  #cloudContainer {
    height: 500px;
    width: 300px;
    object-fit: scale-down;
    padding-left: 0px;
    text-align: left;
  }

  #spotifyWatermark {
    top: 290px;
  }

  #exampleWordCloudImage {
    height: 300px;
    width: 300px;
    object-fit: scale-down;
    text-align: center;
    padding-top: 0px;
    text-align: left;
  }

}

@media screen and (max-width: 345px) {
  #navBarWordCloudify {
    font-size: 24px;
  }

  .timeBtn {
    font-size: 15px;
  }

  .themeBtn {
    font-size: 15px;
  }
}

